fixed stock-overview chart overflowing

--- a/src/main/web/src/app/club-management/stock/merch-stock-status-chart/merch-stock-status-chart.component.scss
+++ b/src/main/web/src/app/club-management/stock/merch-stock-status-chart/merch-stock-status-chart.component.scss
@@ -1,10 +1,9 @@
 :host {
 	position: relative;
 	flex: 1;
-	height: 300px;
 	display: block;
-	max-height: 300px;
 	min-height: 300px;
 	margin-bottom: 106px;
-	margin-left: 5px;
+	margin-left: 8px;
+	padding-bottom: 8px;
 }
